Fixing font size and general spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -58,15 +58,22 @@ p, h1, h2, h3, h4, h5, h6 {
   --fw-800: 800;
 }
 
+@font-face {
+  font-family: 'Plus Jakarta Sans';
+  src: url('../public/fonts/PlusJakartaSans-VariableFont_wght.ttf');
+}
+
 body {
   background-color: var(--neutral-light-greyish-blue);
   font-family: var(--font-family);
-  font-size: var(--font-size);
+  /* font-size: var(--font-size); */
+  font-size: 0.8rem;
   font-weight: var(--fw-500);
+  color: var(--nueutral-dark-grayish-blue);
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-inline: 1rem;
+  margin-inline: 0.5rem;
   margin-block: 2rem; 
 }
 
@@ -74,7 +81,7 @@ main {
   border-radius: 1rem;
   background-color: var(--neutral-white);
   padding-block: 2rem;
-  padding-inline: 1rem;
+  padding-inline: 0.5rem;
 }
 
 header {
@@ -83,12 +90,13 @@ header {
   gap: 1rem;
   align-items: baseline;
   justify-content: space-between;
-  flex-wrap: nowrap;
-  padding-inline: 2rem;
+  padding-inline: 0.8rem;
 }
 
-section {
-  background-color: var(--neutral-white);/*placeholder value*/
+h2 {
+  font-size: 1.2rem;
+  font-weight: var(--fw-800);
+  color: var(--neutral-dark-blue);
 }
 
 ol {
@@ -96,17 +104,12 @@ ol {
 }
 
 li {
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* gap: 2rem; */
-  /* flex-wrap: wrap; */
   display: grid;
   grid-template-columns: 20% auto;
   align-items: center;
   column-gap: 0.2rem;
-  padding-block: 2rem;
   border-radius: 1rem;
-  margin-block: 1rem;
+  margin-block: 2rem;
 }
 
 .post {
@@ -121,9 +124,15 @@ li {
   grid-column: 1/3;
 }
 
+.user-name {
+  font-weight: var(--fw-800);
+  color: var(--neutral-dark-blue);
+}
+
 button {
   border: none;
   background-color: transparent;
+  color: var(--nueutral-dark-grayish-blue);
   cursor: pointer;
 }
 
